# quolate

./: .env.example  .gitignore  README.md  STARTUP.md  docker-compose.yml  start.ps1  tasks.ps1  test_classify_upload.txt
backend/: alembic.ini  pyproject.toml  run.py
backend/app/: audit.py  bom_parser.py  config.py  errorlog.py  main.py  schemas.py
backend/app/api/: __init__.py  activity.py  admin.py  bom.py  chat.py  documents.py  duty.py  fields.py  gpu.py  library.py  matrix.py  project_library_links.py  projects.py  quotations.py  saved_filters.py  tender_sources.py
backend/app/auth/: security.py
backend/app/chat/: __init__.py  loop.py  rag.py  tools.py  web.py
backend/app/db/: base.py  models.py  session.py
backend/app/duty/: __init__.py  calculator.py  classifier.py  engine.py  invoice_parse.py  rate_memory.py  resolver.py  schemas.py  sheet_engine.py
backend/app/ingestion/: bom_bootstrap.py  chunking.py  extract.py  llm_extract.py  persist.py  pipeline.py  progress.py  rasterize.py
backend/app/jobs/: registry.py
backend/app/llm/: client.py  gpu.py  json_enforce.py  mock.py  prompts.py
backend/app/matrix/: __init__.py  builder.py  export.py  fx_live.py  landed_cost.py  rates.json
backend/app/ocr/: __init__.py  paddle.py
backend/tests/: conftest.py  fixtures_gen.py  test_admin.py  test_bom_bootstrap.py  test_duty_classifier.py  test_duty_engine.py  test_m0_skeleton.py  test_m1_auth.py  test_m2_ingestion.py  test_m2_llm_live.py  test_m2_realdata.py  test_m3_matrix.py  test_m4_chat.py  test_m4_chat_live.py  test_m5_quotations.py  test_m5_tenders.py  test_m6_library.py  test_m7_rag.py  test_matrix_duty.py  test_persist_rollup.py  test_sheet_duty.py
(+105 files in other folders)
