[project]
name = "quolate-backend"
version = "0.1.0"
description = "Quolate MVP backend - AI sourcing workbench"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.1.18",
    "pgvector>=0.2.5",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "PyJWT>=2.8",
    "bcrypt>=4.1",
    "httpx>=0.27",
    "openai>=1.30",
    "pymupdf>=1.24",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "rapidfuzz>=3.9",
    "jsonschema>=4.21",
    "python-dateutil>=2.9",
    "python-docx>=1.1",
    "python-pptx>=0.6.23",
]

[project.optional-dependencies]
# Heavy / OCR + scraping deps. Installed on real machines; tests mock these.
ocr = [
    "paddlepaddle>=2.6",
    "paddleocr>=2.7",
]
scrape = [
    "beautifulsoup4>=4.12",
    "trafilatura>=1.9",
    "ddgs>=6.0",
    "playwright>=1.44",
    "apscheduler>=3.10",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "Pillow>=10.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-m 'not llm and not realdata and not live and not ocr'"
markers = [
    "llm: tests that require a live Ollama server",
    "realdata: tests that run over user-supplied docs in ../testdata",
    "live: tests that hit live external websites",
    "ocr: tests that require a real PaddleOCR install",
]
filterwarnings = ["ignore::DeprecationWarning"]
asyncio_mode = "auto"
